feat: :sparkles: update pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,11 @@ name: flutter_basic_util
 description: "A new Flutter package project."
 version: 0.0.1
 homepage: https://github.com/elieonline/flutter_basic_util
+repository: https://github.com/elieonline/flutter_basic_util
+license: MIT
 
 environment:
-  sdk: ^3.8.1
-  flutter: ">=1.17.0"
+  sdk: ">=3.8.1 <4.0.0"
 
 dependencies:
   flutter:
@@ -19,5 +20,3 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
-flutter:
