feat: :sparkles: description updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_basic_util
-description: "A new Flutter package project."
+description: "A set of small Flutter utilities."
 version: 0.0.1
 homepage: https://github.com/elieonline/flutter_basic_util
 repository: https://github.com/elieonline/flutter_basic_util
