feat: :sparkles: name updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_basic_util
+name: flutter_basic_utils_ultra
 description: "A set of small Flutter utilities."
 version: 0.0.1
 homepage: https://github.com/elieonline/flutter_basic_util
